# 42

./: .gitignore
camagru/: .gitignore  index.php
camagru/app/Controllers/: Controller.class.php  (+3 more)
camagru/config/: camagru.sql  database.php  routes.php  setup.php
camagru/public/: .htaccess  index.php
docker-1/00_how_to_docker/: 01  02  03  04  06  07  08  09  10  12  13  14  15  16  18  19  20  21  22  23  24  25  26  27  28  29  30  32  33  34
exams/: a.out  brackets.c  rev_wstr.c
fdf/: .gitignore  Makefile
fdf/includes/: fdf.h
fdf/srcs/: debugger.c  displayer.c  error.c  listener.c  main.c  reader.c  window.c
fillit/: Makefile  a.out  auteur  checker.c  displayer.c  fillit  fillit.h  main.c  main_test.c  reader.c  sample3  sample4  solver.c
fillit-test/: gen.py  generated  main_test.c
fillit-test/test/: invalid  mac  sample  sample19  sample2  sample3  sample5  sample6  sample7  test.txt
fillit-test/test2/: L  L2  L3  S  S2  T  T2  T3  T4  Z  Z2  barreh  barrev  square
fillit/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_lst_count.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  (+29 more)
fractol/: .gitignore  CMakeLists.txt  Makefile
fractol/includes/: fractol.h  prototypes.h  structs.h
fractol/libft/: Makefile  ft_getnbr.c  ft_isprint.c  ft_lstmap.c  ft_reverse_tab.c  ft_strcpy.c  ft_striteri.c  ft_strlen.c  ft_strncmp.c  ft_strsplit.c  libft.h
fractol/srcs/: cli.c  display.c  events.c
fractol/srcs/fractals/: burningship.c  julia.c  mandelbrot.c
ft_ls/: .gitignore  CMakeLists.txt  Makefile  ft_ls
ft_ls/includes/: ft_ls.h  libs.h  prototypes.h  structs.h
ft_ls/libft/: .gitignore  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_islower.c  ft_lstadd.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putendl.c  ft_putstr.c  ft_sort_wordtab.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_strmap.c  ft_strmapi.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  libft.h
ft_ls/srcs/: cli.c  display.c  finder.c
ft_printf/: .gitignore  CMakeLists.txt  Makefile  main_test.c
ft_printf/includes/: core.h  prototypes.h  structs.h
ft_printf/srcs/: core.c  flags.c  modifiers.c  registerer.c
ft_printf/srcs/flags/: chars.c  numbers.c  others.c  strings.c
ft_printf/srcs/types/: arrays.c  binary.c  chars.c  floats.c  numbers.c  numbers_l.c  others.c  pointers.c  strings.c
ft_printf/srcs/utils/: bases.c  colors.c  flags.c  floats.c  get_numbers.c  numbers.c  pad.c  wchars.c  write.c
ft_printf/tests/: assert_x.c  functions.h  output  pays42.c
get_next_line/: .gitignore  CMakeLists.txt  a.out  get_next_line.c  get_next_line.c.first  get_next_line.h  main_test.c  start.sh  test  test2  test4  test6
hypertube/: .gitignore  auteur  hypertube.sql  index.js  package.json
hypertube/config/: config.js
hypertube/locales/: en.json  fr.json
hypertube/views/: home.pug  layout.pug  library.pug  search.pug
init/network/: 01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16
init/scripts/: 01  02  03  04  05
init/system/: 01  02  03  05  06  07  08  12  13  14  15  18  19
libft/: Makefile  ft_dup.c  ft_itoa.c  ft_lstdel.c  ft_lstiter.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_strcntfirstchar.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strnequ.c
matcha/: .gitignore  matcha.sql  package-lock.json  package.json
matcha/config/: config.js
matcha/srcs/: index.js
minishell/: .gitignore  CMakeLists.txt  Makefile  minishell
minishell/ft_printf/: .gitignore  Makefile
minishell/ft_printf/includes/: core.h  prototypes.h  structs.h
minishell/ft_printf/srcs/: core.c  flags.c
minishell/ft_printf/srcs/types/: arrays.c  binary.c  chars.c  floats.c  numbers.c  numbers_l.c  others.c  pointers.c  strings.c
minishell/ft_printf/srcs/utils/: bases.c  colors.c  flags.c  floats.c  get_numbers.c  numbers.c  pad.c  wchars.c  write.c
minishell/includes/: minishell.h  prototypes.h  structs.h
minishell/libft/: Makefile  ft_getnbr.c  ft_isalpha.c  ft_strcntlastchar.c  ft_strlcpy.c  ft_strnequ.c  ft_strnew.c  ft_strsplit.c  ft_strsplitchrset.c  get_next_line.c  get_next_line.h  libft.h
minishell/srcs/: cli.c  display.c  env.c  execute.c  fs.c  utils.c
minishell/srcs/builtin/: cd.c  echo.c  env.c  exit.c  setenv.c  unsetenv.c
piscine-php/rush00/: account.php  add_to_cart.php  auteur  cart.php  delete_account.php  edit_account.php  index.php  install.php  invoice.php  set_quantity.php  signin.php  signout.php  signup.php  style.css
piscine-reloaded/ex00/: exo.tar
piscine-reloaded/ex02/: clean
piscine-reloaded/ex04/: MAC.sh
piscine-reloaded/ex06/: ft_print_alphabet.c
piscine-reloaded/ex08/: ft_is_negative.c
piscine-reloaded/ex09/: ft_ft.c
piscine-reloaded/ex10/: ft_swap.c
piscine-reloaded/ex15/: ft_putstr.c
piscine-reloaded/ex17/: ft_strcmp.c
piscine-reloaded/ex18/: ft_print_params.c
piscine-reloaded/ex20/: ft_strdup.c
push_swap/: .gitignore  CMakeLists.txt  Makefile  checker
push_swap/includes/: checker.h  push_swap.h
push_swap/libft/: Makefile  auteur  ft_atoi_base.c  ft_copy_tab.c  ft_free_tab.c  ft_get_chartab_size.c  ft_getnbr.c  ft_in_tab.c  ft_lstaddend.c  ft_lstdelone.c  ft_move_tab.c  ft_push.c  ft_putchar.c  ft_putnbr.c  ft_reverse_tab.c  ft_sort_wordtab.c  ft_strclr.c  ft_strjoin.c  ft_strncpy.c  ft_strsplitchrset.c  libft.h
push_swap/libs/get_next_line/: get_next_line.c  get_next_line.h
push_swap/srcs/: check_order.c  checker.c  checker_error.c  display.c  numbers.c  operate.c  push_swap.c
(+281 files in other folders)
