cmake_minimum_required(VERSION 3.9)
project(minishell)

set(CMAKE_CXX_STANDARD 11)

add_executable(minishell
        ft_printf/includes/core.h
        ft_printf/includes/prototypes.h
        ft_printf/includes/structs.h
        ft_printf/srcs/types/arrays.c
        ft_printf/srcs/types/binary.c
        ft_printf/srcs/types/chars.c
        ft_printf/srcs/types/floats.c
        ft_printf/srcs/types/numbers.c
        ft_printf/srcs/types/numbers_l.c
        ft_printf/srcs/types/others.c
        ft_printf/srcs/types/pointers.c
        ft_printf/srcs/types/strings.c
        ft_printf/srcs/utils/bases.c
        ft_printf/srcs/utils/colors.c
        ft_printf/srcs/utils/flags.c
        ft_printf/srcs/utils/floats.c
        ft_printf/srcs/utils/get_numbers.c
        ft_printf/srcs/utils/numbers.c
        ft_printf/srcs/utils/pad.c
        ft_printf/srcs/utils/wchars.c
        ft_printf/srcs/utils/write.c
        ft_printf/srcs/core.c
        ft_printf/srcs/flags.c
        ft_printf/Makefile
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_bzero.c
        libft/ft_dup.c
        libft/get_next_line.c
        libft/ft_isalnum.c
        libft/ft_getnbr.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isupper.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_lstadd.c
        libft/ft_lstaddend.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_max.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_nbrlen.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_reverse_tab.c
        libft/ft_sort_wordtab.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcntfirstchar.c
        libft/ft_strcntlastchar.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strsplitchrset.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        libft/Makefile
        srcs/env.c
        Makefile srcs/cli.c includes/minishell.h includes/prototypes.h includes/structs.h srcs/display.c srcs/builtin/echo.c srcs/builtin/cd.c srcs/builtin/setenv.c srcs/builtin/unsetenv.c srcs/builtin/env.c srcs/builtin/exit.c srcs/env.c srcs/execute.c srcs/utils.c srcs/fs.c libft/ft_strlcpy.c)
